prevent footer from wrapping on iPhone portrait

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -105,7 +105,7 @@ body {
     position: relative;
     border-left: none;
     padding-left: 0;
-    margin: 6px 15px 6px 9px;
+    margin: 6px 13px 6px 9px;
   }
 
   & a:hover {
